# LixurProtocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: codeql-analysis.yml
Lixur Protocol/: Cargo.toml  README.md  requirements.txt  run.py  run_node.py
Lixur Protocol/client/: graph.json  run.py
Lixur Protocol/database/: graph.json  words.txt
Lixur Protocol/db/: tangledb.json
Lixur Protocol/docs/: notes.txt
Lixur Protocol/docs/latex/: compile.sh  report.tex
Lixur Protocol/lib/: neighbour.py  node.py  tangle.py  transaction.py  util.py  wallet.py
Lixur Protocol/server/: cryptography.py  graph.json  graph.py  interface.py  node.py  shard
Lixur Protocol/source/: client.py  cloud.py  consensus.py  credentials.json  cryptography.py  decrypt_words.txt  graph.json  graph.py  hash_words.txt  info.json  interface.py  lixur_keystore.txt  node.py  notes.py  peers.txt  phrase.txt  recycle.py  server.py  shard.py  token.json  token_Drive_v3.pickle  util.py  wallet.py
Lixur Protocol/source/misc/: LICENSE  notes.py  readme  transaction.py
Lixur Protocol/src/: main.rs
Python Code Archive/: note.txt  requirements.txt
Python Code Archive/client/: run.py
Python Code Archive/server/: cryptography.py  decrypt_words.txt  graph.json  graph.py  node.py  run.py  util.py
chain/: Cargo.toml  chain.json  chain.rs  utilities.rs
chain/src/: chain.rs  utilities.rs
crypto/: Cargo.toml  crypto.rs  words.txt
crypto/src/: crypto.rs  words.txt
database/: graph.json
main/: Cargo.toml
main/chain/: chain.json
main/src/: main.rs
notes/: notes.txt
source/: consensus.py  notes.py  util.py
src/: chain.rs  utilities.rs
