[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-falcon = "0.2.10"
pqcrypto-traits = "0.3.4"
sha2 = "0.10.2"
rand = "0.8.5"
magic-crypt = "3.1.10"

[lib]
name = "crypto"
path = "src/crypto.rs"

[[bin]]
name = "crypto"
path = "src/crypto.rs"